# notebooks

./: .gitmodules
CNN/: .gitignore  1-A first look at a neural network.ipynb  3-Reimplementing our first example from scratch in TensorFlow.ipynb  4-Introduction to Keras and TensorFlow.ipynb  5-Getting started with neural networks: Classification and regression.ipynb  6-Classifying newswires: A multiclass classification example.ipynb  7-Predicting house prices: A regression example.ipynb  8-Fundamentals of machine learning.ipynb  Data representations for neural networks.ipynb  Reimplementing our first example from scratch in TensorFlow.ipynb  latexify_examples.ipynb  pyproject.toml
CNN/.ipynb_checkpoints/: A first look at a neural network-checkpoint.ipynb  Data representations for neural networks-checkpoint.ipynb
CNN/tf-book/: 1-welcome.ipynb  Untitled.ipynb
Contrastive-Learning/: pyproject.toml
Contrastive-Learning/notebooks/: SimCLR.ipynb
