[tool.poetry]
name = "cnn"
version = "0.1.0"
description = ""
authors = ["desonglll <lindesong666@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
torch = "^2.5.1"
tensorflow = "2.17.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
