[tool.poetry]
name = "cnn"
version = "0.1.0"
description = ""
authors = ["desonglll <lindesong666@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
jupyter = "^1.1.1"
torch = "^2.5.1"
tensorflow = "2.17.0"
matplotlib = "^3.10.0"
latexify-py = "^0.4.4"
pandoc = "^2.4"
transformers = "^4.47.1"
tf-keras = "2.17.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
