[tool.poetry]
name = "contrastive-learning"
version = "0.1.0"
description = ""
authors = ["desonglll <lindesong666@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.2.0"
transformers = "^4.47.1"
torchvision = "^0.20.1"
torch = "^2.5.1"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
